--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Simple Form Test</title>
-    <script src="../showcase-data.js"></script>
-    <script src="../libs/jquery/jquery-1.10.2.min.js"></script>
+    <script src="showcase-data.js"></script>
+    <script src="jquery-1.10.2.min.js"></script>
     <script>
 
         $(document).ready(function() {
