--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -46,6 +46,12 @@
 
 
     </script>
+    <style>
+        body {
+            margin-top: 10px;
+            margin-left: 100px; /* enough space for the back button */
+        }
+    </style>
 </head>
 <body>
 
