--- a/web-embed-api/simple-example/index.html
+++ b/web-embed-api/simple-example/index.html
@@ -6,7 +6,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 
-    <script src="https://app.showcaseworkshop.com/main/static/web-embed-api/loader.js" async="async"></script>
+    <script src="https://app.showcaseworkshop.com/main/static/web-embed-api/loader.min.js" async="async"></script>
 
 </head>
 <body>
