update to sample zip

--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -8,8 +8,10 @@
 
         /*
 
-        cd ~/sc/apis/javascript-api/simple-example
+        cd ~/sc/showcase-workshop-apis/javascript-api/simple-example
         zip -r ../simple-example-v3.html.zip *
+        rm -rf ../../web-content-zip/sample.html.zip
+        zip -r ../../web-content-zip/sample.html.zip *
 
          */
         $(document).ready(function() {
