add hyperlinks with schema

--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -118,6 +118,10 @@
         <br/><button class="controls_back-button">Back Button</button> Execute a press of the Showcase Back Button
         <br/><button class="controls_home-button">Home Button</button> Execute a press of the Showcase Home Button
         <br/><button class="controls_share-button">Share Button</button> Execute a press of the Showcase Share Button
+        <br/>
+        <br/><a href="showcaseworkshop://back">Back Hyperlink</a>
+        <br/><a href="showcaseworkshop://home">Home Hyperlink</a>
+        <br/><a href="showcaseworkshop://share">Share Hyperlink</a>
 
         <div class="my-form-log"></div>
 
