--- a/salesforce/web-lead/index.html
+++ b/salesforce/web-lead/index.html
@@ -13,6 +13,10 @@
 </head>
 <body id="salesforce-web-lead">
     <div class="container">
+        <div class="page-header">
+            <h1>Salesforce Lead Entry</h1>
+        </div>
+
         <div class="row">
             <div class="col-md-6">
                 <!-- PASTE YOUR SALESFORCE WEB-LEAD HERE -->
