--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -10,8 +10,8 @@
 
         cd ~/sc/showcase-workshop-apis/javascript-api/simple-example
         zip -r ../simple-example-v3.html.zip *
-        rm -rf ../../web-content-zip/sample.html.zip
-        zip -r ../../web-content-zip/sample.html.zip *
+        rm -rf ../../web-content-zip/sample-4.0.0.html.zip
+        zip -r ../../web-content-zip/sample-4.0.0.html.zip *
 
          */
         $(document).ready(function() {
@@ -122,6 +122,7 @@
         <br/><a href="showcaseworkshop://back">Back Hyperlink</a>
         <br/><a href="showcaseworkshop://home">Home Hyperlink</a>
         <br/><a href="showcaseworkshop://share">Share Hyperlink</a>
+        <br/><a href="another-page.html">Another Page</a>
 
         <div class="my-form-log"></div>
 
