--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Simple Form Test</title>
+    <script src="jquery.min.js"></script>
     <script src="showcase-data.js"></script>
-    <script src="jquery-1.10.2.min.js"></script>
     <script>
 
         /*
@@ -106,8 +106,8 @@
 
     <form class="my-form">
 
-        First Name <input name="first_name" type="text" value="Bill"/>
-        <br/>Last Name <input name="last_name" type="text" value="Cosby"/>
+        First Name <input name="first_name" type="text" value="Totoro"/>
+        <br/>Last Name <input name="last_name" type="text" value="Ghibli"/>
         <br/>
         <br/><button class="put-button">Put</button> Save data to the device memory
         <br/><button class="get-button">Get</button> Get data fromf device memory
