add salesforce back hyperlink

--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -122,6 +122,7 @@
         <br/><a href="showcaseworkshop://back">Back Hyperlink</a>
         <br/><a href="showcaseworkshop://home">Home Hyperlink</a>
         <br/><a href="showcaseworkshop://share">Share Hyperlink</a>
+        <br/><a href="https://app.showcaseworkshop.com/client/salesforce/back">App Captured Salesforce Back Hyperlink</a>
         <br/><a href="another-page.html">Another Page</a>
 
         <div class="my-form-log"></div>
