support for display of html.zip files in browser

--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -119,11 +119,17 @@
         <br/><button class="controls_back-button">Back Button</button> Execute a press of the Showcase Back Button
         <br/><button class="controls_home-button">Home Button</button> Execute a press of the Showcase Home Button
         <br/><button class="controls_share-button">Share Button</button> Execute a press of the Showcase Share Button
+
+        <!-- hyperlink style api in html.zip files not longer supported
         <br/>
         <br/><a href="showcaseworkshop://back">Back Hyperlink</a>
         <br/><a href="showcaseworkshop://home">Home Hyperlink</a>
         <br/><a href="showcaseworkshop://share">Share Hyperlink</a>
+        <br/><a href="showcaseworkshop://backtotop"></a>
+        <br/><a href="showcaseworkshop://next"></a>
+        <br/><a href="showcaseworkshop://prev"></a>
         <br/><a href="https://app.showcaseworkshop.com/client/salesforce/back">App Captured Salesforce Back Hyperlink</a>
+        -->
         <br/><a href="another-page.html">Another Page</a>
 
         <div class="my-form-log"></div>
