add spaces test case

--- a/javascript-api/simple-example/index.html
+++ b/javascript-api/simple-example/index.html
@@ -131,6 +131,8 @@
         <br/><a href="https://app.showcaseworkshop.com/client/salesforce/back">App Captured Salesforce Back Hyperlink</a>
         -->
         <br/><a href="another-page.html">Another Page</a>
+        <br/><a href="another space page.html">Test page 2 link 1</a> (literal spaces in href, strictly this is invalid)
+        <br/><a href="another%20space%20page.html">Test page 2 link 2</a> (spaces encoded as %20 in href, strictly valid)
 
         <div class="my-form-log"></div>
 
