--- a/html-zip/sample-basic-layout/index.html
+++ b/html-zip/sample-basic-layout/index.html
@@ -6,7 +6,7 @@
 
     <title>Sample</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
 
